--- a/client/src/components/Achart.css
+++ b/client/src/components/Achart.css
@@ -1,7 +1,7 @@
 canvas {
 
-    width: 700px !important;
-    height: 400px !important;
+    width: 700px ;
+    height: 400px ;
 
 }
 
@@ -22,15 +22,11 @@ canvas {
 }
 
 .wrapper {
+float: right;
+    padding-right: 5px;
+    margin-right: 50px;
+}
 
-    padding-right: 5px;
-    margin-right: 50px;
-}
-.wrapperr {
-float: none;
-    padding-right: 5px;
-    margin-right: 50px;
-}
 .t {
     float: left;
     border-left: 1px solid #000;
