--- a/client/src/components/Achart.css
+++ b/client/src/components/Achart.css
@@ -1,34 +1,27 @@
 canvas {
+    width: 750px;
+    height: 750px;
 
-    width: 700px ;
-    height: 400px ;
+
+}
+.chart{
 
 }
 
-.left {
-    margin-left: 20px;
-    float: left;
+.buttonToolbar {
 
 }
 
-.buttonGroupLeft {
+.buttonGroupBottom {
 
 }
 
-.right {
-    margin-left: 20px;
-    float: left;
+.buttonGroupTop {
 
 }
 
 .wrapper {
-float: right;
+    float: right;
     padding-right: 5px;
-    margin-right: 50px;
-}
-
-.t {
-    float: left;
-    border-left: 1px solid #000;
-    height: 200px;
+    margin-right: 40px;
 }
