--- a/client/src/components/Achart.css
+++ b/client/src/components/Achart.css
@@ -1,34 +1,32 @@
 canvas {
+    width: 750px;
+    height: 950px;
+}
 
-    width: 700px ;
-    height: 400px ;
+Button{
+
 
 }
 
-.left {
-    margin-left: 20px;
-    float: left;
+.chart {
 
 }
 
-.buttonGroupLeft {
+.buttonToolbar {
 
 }
 
-.right {
-    margin-left: 20px;
-    float: left;
+.buttonGroupBottom {
+
+
+}
+
+.buttonGroupTop {
 
 }
 
 .wrapper {
-float: right;
-    padding-right: 5px;
-    margin-right: 50px;
-}
-
-.t {
-    float: left;
-    border-left: 1px solid #000;
-    height: 200px;
+    float: right;
+    /*  padding-right: 5px;  */
+    margin-right: 40px;
 }
